--- a/src/common/graphics/OpenGL/examples/Makefile
+++ b/src/common/graphics/OpenGL/examples/Makefile
@@ -19,22 +19,16 @@
 ##=====================================================================
 
 ###################################################
-# Executable name
-PROJECT = OpenGLExamples
-TARGET = $(PROJECT)
+# Location of the project directory and Makefiles
+P=../../../../..
+M=$(P)/.makefile
 
 ###################################################
-# Debug mode or Release mode
+# Executable name
+TARGET = OpenGLExamples
+DESCRIPTION = Examples made with OpenGL wrapper
 BUILD_TYPE = debug
 
-###################################################
-# Location from the project root directory.
-P=../../../../..
-
-###################################################
-# Sharable informations between all Makefiles
-M=$(P)/.makefile
-include $(M)/Makefile.header
 include $(P)/Makefile.common
 
 ###################################################
@@ -67,7 +61,7 @@ RESOURCES := textures/README.md
 # Set Libraries compiled in the external/ directory.
 # For knowing which libraries is needed please read
 # the doc/Install.md file.
-THIRDPART_LIBS += $(abspath $(P)/external/SOIL/libSOIL.a)
+THIRDPART_LIBS += $(abspath $(THIRDPART)/SOIL/libSOIL.a)
 
 ###################################################
 # Compile tutorials
